// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="tc grow bg-light-green br3 pa3 ma2 dib bw2 shadow-5"
    data-testid="card-component"
  >
    <img
      alt="robots"
      height="200"
      src="https://robohash.org/123?size=200x200"
      width="200"
    />
    <div>
      <h2>
        John Doe
      </h2>
      <p>
        john@example.com
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card component handles missing props gracefully 1`] = `
<DocumentFragment>
  <div
    class="tc grow bg-light-green br3 pa3 ma2 dib bw2 shadow-5"
    data-testid="card-component"
  >
    <img
      alt="robots"
      height="200"
      src="https://robohash.org/undefined?size=200x200"
      width="200"
    />
    <div>
      <h2 />
      <p />
    </div>
  </div>
</DocumentFragment>
`;
